--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "external/glfw"]
-	path = external/glfw
-	url = https://github.com/glfw/glfw
-[submodule "external/imgui"]
-	path = external/imgui
-	url = https://github.com/ocornut/imgui
-[submodule "external/implot"]
-	path = external/implot
-	url = https://github.com/epezent/implot.git
+[submodule "src/SymBase"]
+	path = src/SymBase
+	url = https://github.com/sebastianSzarafin/SimulationBase.git
